// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders 1`] = `
<DocumentFragment>
  <div
    class="_typography_61e060 _font-body-sm-medium_61e060 _toast-container_78370f"
  >
    <div
      class="_content_78370f"
    >
      Would you like some toast?
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > renders multiline 1`] = `
<DocumentFragment>
  <div
    style="width: 250px;"
  >
    <div
      class="_typography_61e060 _font-body-sm-medium_61e060 _toast-container_78370f"
    >
      <div
        class="_content_78370f"
      >
        <svg
          aria-hidden="true"
          class="_icon_78370f"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
          />
        </svg>
        Would you like some toast on multiple multiple multiple lines?
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > renders with a close button and icon 1`] = `
<DocumentFragment>
  <div
    class="_typography_61e060 _font-body-sm-medium_61e060 _toast-container_78370f _has-close_78370f"
  >
    <div
      class="_content_78370f"
    >
      <svg
        aria-hidden="true"
        class="_icon_78370f"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
      Would you like some toast?
    </div>
    <button
      aria-labelledby="_r_0_"
      class="_icon-button_339b22 _close_78370f _no-background_339b22"
      data-kind="secondary"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_849abf"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Toast > renders with an icon 1`] = `
<DocumentFragment>
  <div
    class="_typography_61e060 _font-body-sm-medium_61e060 _toast-container_78370f"
  >
    <div
      class="_content_78370f"
    >
      <svg
        aria-hidden="true"
        class="_icon_78370f"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
      Would you like some toast?
    </div>
  </div>
</DocumentFragment>
`;
